--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/style.css">
+    <link rel="shortcut icon" href="public/images/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title>John Culleeny</title>
 </head>
@@ -20,6 +21,8 @@
             <div class="section-contents">
                 <h2>Something</h3>
                 <p>
+                    Front-end Engineer from Seattle. I am both a father of three, turntable enthusiast, film lover, and a ramen eater and creator.
+
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse semper aliquam consequat. 
                     Nam condimentum tortor metus, viverra pellentesque nulla malesuada ut. Donec in rutrum magna. 
                     Etiam mattis nulla accumsan dolor tempus condimentum. Etiam commodo vel lacus a lobortis. 
