rolled back some copy temporarily

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="section-contents">
                 <h2>Something</h3>
                 <p>
-                    Front-end Engineer from Seattle. I am both a father of three, turntable enthusiast, film lover, and a ramen eater and creator.
+                    <!-- Front-end Engineer from Seattle. I am both a father of three, turntable enthusiast, film lover, and a ramen eater and creator. -->
 
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse semper aliquam consequat. 
                     Nam condimentum tortor metus, viverra pellentesque nulla malesuada ut. Donec in rutrum magna. 
