Updated the about me section

--- a/index.html
+++ b/index.html
@@ -19,15 +19,9 @@
         </aside>
         <section>
             <div class="section-contents">
-                <h2>Something</h3>
+                <h2>ABOUT ME</h3>
                 <p>
-                    <!-- Front-end Engineer from Seattle. I am both a father of three, turntable enthusiast, film lover, and a ramen eater and creator. -->
-
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse semper aliquam consequat. 
-                    Nam condimentum tortor metus, viverra pellentesque nulla malesuada ut. Donec in rutrum magna. 
-                    Etiam mattis nulla accumsan dolor tempus condimentum. Etiam commodo vel lacus a lobortis. 
-                    Vestibulum porttitor hendrerit mauris at luctus. Donec vitae ipsum dapibus, posuere justo non, 
-                    convallis arcu. Sed semper ut tortor at rhoncus. Curabitur a viverra lorem.
+                    Front-End Engineer from Seattle. I am a father of three, turntable enthusiast, film lover, and a ramen eater and creator.
                 </p>
                 <div class="icons">
                     <p>
