--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/style.css">
     <link rel="shortcut icon" href="public/images/favicon-16x16.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title>John Culleeny</title>
 </head>
+
 <body>
     <main class="flex-container">
         <aside>
@@ -20,18 +23,44 @@
         <section>
             <div class="section-contents">
                 <h2>ABOUT ME</h3>
-                <p>
-                    Front-End Engineer from Seattle. I am a father of three, turntable enthusiast, film lover, and a ramen eater and creator.
-                </p>
-                <div class="icons">
-                    <p>
-                        <a href="mailto:jculleeny@gmail.com"><i class="far fa-envelope"></i></a>
-                        <a href="https://github.com/jculleeny" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://www.instagram.com/jculleeny/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    </p>
-                </div>
+                    <div class="about-me-wrapper">
+                        <div class="about-me">
+                            <p>
+                                Front-End Engineer from Seattle. I am a father of three, turntable enthusiast, film
+                                lover,
+                                and a
+                                ramen eater and creator.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-wrapper">
+                        <h2>PORTFOLIO WORK</h2>
+                        <div class="portfolio">
+                            <ul>
+                                <li><a href="https://movie-night-meals-jiknm.ondigitalocean.app/" target="_blank"
+                                        rel="noopener noreferrer"><img src="/public/images/movie-night-meals.jpg"
+                                            alt="movie-night-meals-pic"></a></li>
+                                <li><a href="https://jculleeny.github.io/alphabet-learning-game/ target=" _blank"
+                                        rel="noopener noreferrer"><img src="/public/images/alphabet-game.jpg"
+                                            alt="alphabet-game-pic"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+
+                    <div class="icons">
+                        <p>
+                            <a href="mailto:jculleeny@gmail.com"><i class="far fa-envelope"></i></a>
+                            <a href="https://github.com/jculleeny" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://www.instagram.com/jculleeny/" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
+                        </p>
+                    </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
