--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <li><a href="https://movie-night-meals-jiknm.ondigitalocean.app/" target="_blank"
                                         rel="noopener noreferrer"><img src="/public/images/movie-night-meals.jpg"
                                             alt="movie-night-meals-pic"></a></li>
-                                <li><a href="https://jculleeny.github.io/alphabet-learning-game/ target=" _blank"
+                                <li><a href="https://jculleeny.github.io/alphabet-learning-game/" target="_blank"
                                         rel="noopener noreferrer"><img src="/public/images/alphabet-game.jpg"
                                             alt="alphabet-game-pic"></a></li>
                             </ul>
